Added changing of color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <button>Size</button>
+    <div class="color">
+        <button class="changeColor">Change Color</button>
+    </div>
+    
     <div class="container"></div>
 </body>
 </html>
