Added title and rework UI

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     
 </head>
 <body>
-    <button>Size</button>
-    <div class="color">
-        <button class="changeColor">Change Color</button>
+    <header>Etch-a-Sketch</header>
+    <div class="main">
+        <aside class="ui">
+            <button class="sizeButton">Size</button>
+            <div class="colorContainer">
+                <button type="button" class="randomColorButton">Random Color</button>
+                <div class="currentColor"></div>
+            </div>
+        </aside>
+
+        <div class="container"></div>
     </div>
-    
-    <div class="container"></div>
 </body>
 </html>
